--- a/opis.html
+++ b/opis.html
@@ -1,88 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>eZdravje :: 4. DN :: OIS 2015/2016</title>
-  <link href="knjiznice/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body {padding-top: 70px;}
-  </style>
-  <script src="knjiznice/js/jquery-2.2.3.min.js"></script>
-  <script src="knjiznice/js/bootstrap.min.js"></script>
-  <script src="knjiznice/js/koda.js"></script>
-</head>
-<body>
-
-  <!-- ZAČETEK: Menujska vrstica na vrhu spletne strani -->
-  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#menujska-vrstica">
-          <span class="sr-only">Prikaži menu</span>
-          <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-        </button>
-        <!-- ZAČETEK: Ime vaše aplikacije -->
-        <a class="navbar-brand" href="index.html">{ime vaše aplikacije}</a>
-        <!-- KONEC: Ime vaše aplikacije -->
-      </div>
-      <div class="collapse navbar-collapse" id="menujska-vrstica">
-        <ul class="nav navbar-nav">
-          <li><a href="opis.html">Opis ideje</a></li>
-          <li><a href="nacrt.html">Načrt informacijske rešitve</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <!-- KONEC: Menujska vrstica na vrhu spletne strani -->
-
-  <!-- ZAČETEK: Opis delovanja aplikacije -->
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h3 class="panel-title">Opis ideje, ki jo aplikacija podpira</h3>
-          </div>
-          <div class="panel-body">
-            <!-- ZAČETEK: Opis ideje, ki jo aplikacija podpira -->
-            <p><strong>TO-DO</strong>: Na tem mestu je potrebno dodati <strong>osnovni opis ideje rešitve</strong> (kakšen je osnovni SCENARIJ UPORABE, KDO je ciljna publika, za kakšen NAMEN se aplikacija uporablja).</p><p class="text-muted">Opis naj ne bo daljši od 200 besed.</p>
-            <!-- KONEC: Opis ideje, ki jo aplikacija podpira -->
-          </div>
-        </div>
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h3 class="panel-title">Uporabljeni zunanji viri podatkov</h3>
-          </div>
-          <div class="panel-body">
-            <!-- ZAČETEK: Uporabljeni zunanji viri podatkov -->
-            <p><strong>TO-DO</strong>: Na tem mestu je navesti zunanji vir podatkov (URL naslov), na kakšen način ste ga uporabili (neposredni API klic, uvožena statična datoteka ipd.) in kaj je bil namen uporabe (kako se vključuje v osnovno idejo aplikacije).</p>
-            <!-- KONEC: Uporabljeni zunanji viri podatkov -->
-          </div>
-        </div>
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h3 class="panel-title">Master/detail načrtovalski vzorec</h3>
-          </div>
-          <div class="panel-body">
-            <!-- ZAČETEK: Master/detail načrtovalski vzorec -->
-            <p><strong>TO-DO</strong>: Na tem mestu morate navesti uporabljen master/detail načrtovalski vzorec in na kakšen način ga nameravate uporabiti.</p>
-            <!-- KONEC: Master/detail načrtovalski vzorec -->
-          </div>
-        </div>
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h3 class="panel-title">Uporabljena tehnika za vizualizacijo podatkov</h3>
-          </div>
-          <div class="panel-body">
-            <!-- ZAČETEK: Uporabljeni zunanji viri podatkov -->
-            <p><strong>TO-DO</strong>: Na tem mestu je potrebno navesti uporabljeno tehniko vizualizacije podatkov (za pomoč lahko uporabite primer iz <a href="https://github.com/mbostock/d3/wiki/Gallery" target="_blank">D3.js galerije</a>) in zakaj je bila ta tehnika izbrana.</p>
-            <!-- KONEC: Uporabljeni zunanji viri podatkov -->
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- KONEC: Opis delovanja aplikacije -->
-
-</body>
+	<head>
+		<meta charset="utf-8">
+		<title>4. DN :: Soba 102</title>
+		<link rel="icon" type="image/svg" href="img/favicon.svg">
+		<link href="knjiznice/css/style.css" rel="stylesheet">
+		<link href="knjiznice/css/bootstrap.min.css" rel="stylesheet">
+		<script src="knjiznice/js/jquery-2.2.3.min.js"></script>
+		<script src="knjiznice/js/bootstrap.min.js"></script>
+		<script src="knjiznice/js/koda.js"></script>
+	</head>
+	<body>
+		<div class="body-wrapper">
+			<header>
+				<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+					<div class="container">
+						<div class="navbar-header">
+							<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#menujska-vrstica">
+								<span class="sr-only">Prikaži menu</span>
+								<span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+							</button>
+							<a class="navbar-brand" href="index.html">Soba 102</a>
+						</div>
+						<div class="collapse navbar-collapse" id="menujska-vrstica">
+							<ul class="nav navbar-nav">
+								<li><a href="opis.html">Opis ideje</a></li>
+								<li><a href="nacrt.html">Načrt informacijske rešitve</a></li>
+							</ul>
+						</div>
+					</div>
+				</nav>
+			</header>
+			<main>
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-12 text-center">
+							<div class="panel panel-default">
+								<div class="panel-heading">
+									<h3 class="panel-title">Opis ideje, ki jo aplikacija podpira</h3>
+								</div>
+								<div class="panel-body">
+									<!-- ZAČETEK: Opis ideje, ki jo aplikacija podpira -->
+									<p>Portal <b>Soba 102</b> je predstavitev ideje o interaktivnem zdravstvenem kartonu in prikazuje možnosti uporabe ob viziti. Uporabniki (zdravniki in medicinske sestre) si izberejo sobo (sedaj že v naprej izbrana), kjer so prikazane postelje s podatki o pacientih. Za vsakega pacienta lahko nato uporabnik odpre karton in pregleda ter uredi podatke. Za potrebe hirejše analize stanja je implementiran dinamični prikaz podatkov v grafu. Le-ta se samodejno posodablja ob spremembi vrednosti, vključno z barvo, katera je odvisna od stanja pacienta. V karton je vključena komunikacija s spletno stranjo <a href="https://www.lekarnar.com" target="_blank">www.lekarnar.com</a>, kjer se avtomatično poiščejo ustrezna priporočila zdravila z ozirom na pacientovo zdravstveno stanje. Omogočena je tudi odpustitev pacienta, kar se bo poznalo na prikazu postelj, saj bo ustrezno ležišče zopet prazno.</p>
+									<!-- KONEC: Opis ideje, ki jo aplikacija podpira -->
+								</div>
+							</div>
+							<div class="panel panel-default">
+								<div class="panel-heading">
+									<h3 class="panel-title">Uporabljeni zunanji viri podatkov</h3>
+								</div>
+								<div class="panel-body">
+									<!-- ZAČETEK: Uporabljeni zunanji viri podatkov -->
+									<p>Portal zdravstvenemu osebju prikaže spletno stran <a href="https://www.lekarnar.com" target="_blank">www.lekarnar.com</a>, kjer poišče ustrezna zdravila za pacientovo zdravljenje. Odpiranje strani je izvedeno programsko na osnovi podatkov iz pacientovega zdravstvenega kartona. S tem se olajša odločanje in izbira zdravljenja.</p>
+									<!-- KONEC: Uporabljeni zunanji viri podatkov -->
+								</div>
+							</div>
+							<div class="panel panel-default">
+								<div class="panel-heading">
+									<h3 class="panel-title">Master/detail načrtovalski vzorec</h3>
+								</div>
+								<div class="panel-body">
+									<!-- ZAČETEK: Master/detail načrtovalski vzorec -->
+									<p>Načrtovalski vzorec je implementiran s pomočjo gumba <b>Generiranje podatkov</b>, kateri napolni tri postelje s primeri pacientov. V postelje se izpišeta ime in priimek pacienta, v ozadju pa se v skriti element shrani EHR ID pacienta. S pritiskom na gumb <b>Preglej karton</b> se prikaže stran z vsemi zdravstvenimi podatki pacienta, kateri se črpajo iz baze EHR Scape s pomočjo EHR ID-jev, kateri se prenašajo kot parametri URL naslova. Omogočeno je tudi iskanje z direktnim vnosom EHR ID-ja v polja na strani prikaza postelje. Rezultat iskanja bo izpolnil polja kartona.</p>
+									<!-- KONEC: Master/detail načrtovalski vzorec -->
+								</div>
+							</div>
+							<div class="panel panel-default">
+								<div class="panel-heading">
+									<h3 class="panel-title">Uporabljena tehnika za vizualizacijo podatkov</h3>
+								</div>
+								<div class="panel-body">
+									<!-- ZAČETEK: Uporabljeni zunanji viri podatkov -->
+									<p>Za vizualizacijo je bila uporabljena knjižnica <a href="https://d3js.org/" target="_blank">D3</a>, s pomočjo katere so podatki v pacientovem kartonu prikazani v ležečem histogramu. Ob spremembi vrednosti v poljih (ter po izgubi fokusa polja) se graf prilagodi novi vrednosti in tudi ustrezno obarva z rdečo oziroma zeleno. Tovrstno podajanje informacije razbremeni zdravstveno osebje, saj z barvnim prikazom in razponom histograma nudi hitro evaluacijo pacientovega stanja.</p>
+									<!-- KONEC: Uporabljeni zunanji viri podatkov -->
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</main>
+			<footer>
+				Soba 102 &copy ŽVD 2016
+			</footer>
+		</div>
+	</body>
 </html>
